assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: #d9dcd6;
}

header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #2a607c;
    color: #ffffff;
}

header h1 {
    display: inline-block;
    font-size: 48px;
}

header h1 .seo {
    color: #d9dcd6;
}

header nav {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}

header nav ul {
    list-style-type: none;
}

header nav ul li {
    display: inline-block;
    margin-left: 25px;
}

header nav ul li a {
    color: #ffffff;
    text-decoration: none;
}

p {
    font-size: 16px;
}

.hero {
    height: 800px;
    width: 100%;
    margin-bottom: 25px;
    background-image: url("../images/digital-marketing-meeting.jpg");
    background-size: cover;
    background-position: center;
}

.float-left {
    float: left;
    margin-right: 25px;
}

.float-right {
    float: right;
    margin-left: 25px;
}

.content {
    display: inline-block;
    width: 75%;
    margin-left: 20px;
    /* margin-right: 10px; */
    /* width: 1024px; */
    /* overflow: hidden; */

    /* overflow-y: hidden; */
} 
.services {     
    /* width: 75%;  */
    width: 75%;
    /* min-width: 60%; */
    display: inline-block; 
    margin-left: 0px;
    margin-right: 20px;

}
.service {
    /* display: inline-block; */
    /* display: :in; */
    /* display: inline-block; */
    /* overflow: hidden; */
    /* overflow: visible; */
    margin-bottom: 20px;
    
    padding: 50px;
    /* min-height: 250px; */
    min-height: 300px;
    width: 100%;

    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}
.service-blurb {
    /* margin: ; */
    overflow: hidden; 
    max-width: 300px;
    min-width: 250px;
    /* width: 250px; */

}
.service-blurb h2{
    margin-bottom: 20px;
    font-size: 36px;
}

.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    text-align: center;
    /* overflow: scroll; */
    width: 20%;
    /* max-width: 20%; */
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #2589bd;
}

.service p {
    font-size: 16px;
    line-height: 1.3;
  }
.service img {
    max-height: 200px;
    /* margin-bottom: ; */
}

.benefit {
    margin-bottom: 32px;
    overflow: auto;
    color: white
}
.benefit h3 {
    font-size: 24px;
    margin-bottom: 10px;
    text-align: center;
}
.benefit img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}
.benefit p {
    font-size: 16px;
    line-height: 120%;
}

/* section#search-engine-optimization {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}
section#online-reputation-management {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}

section#social-media-marketing {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
} */


footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}

footer h2 {
    font-size: 20px;
}

